# tg_bot_test_work

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  template.env
alembic/: env.py
alembic/versions/: 57bc201a2130_add_user.py  63dc2fca65e1_init.py
src/: config.py  main_api.py  main_bot.py
src/app/: states.py
src/app/domain/: auth_result.py  uow.py  user.py  user_rating.py
src/app/domain/repositories/: user_repository.py
src/app/interfaces/api/: dependencies.py
src/app/interfaces/api/routers/: profile.py
src/app/interfaces/bot/: commands_setup.py  lifecycle.py  states.py
src/app/interfaces/bot/features/: feature_entry.py  features.py
src/app/interfaces/bot/filters/: callback_prefix.py  text_ignore_case.py
src/app/interfaces/bot/handlers/: base.py  cancel.py  errors.py  fallback.py  game.py  init_handlers.py  ping_pong.py  profile.py
src/app/interfaces/bot/keyboards/: keyboard_entry.py  keyboards.py
src/app/interfaces/bot/keybords/: common.py  game.py  keyboard_entry.py  keyboards.py
src/app/interfaces/bot/middlewares/: authorization.py  dependency_injection.py  user_profile_service.py
src/app/interfaces/bot/schedulers/: apscheduler_runner.py
src/app/interfaces/bot/tasks/: healthcheck.py
src/app/schedulers/: apscheduler_runner.py
src/app/services/: user_auth_service.py  user_profile_service.py
src/app/use_cases/: user_auth_service.py  user_game_service.py  user_profile_service.py
src/config/: __init__.py  config.py
src/infrastructure/bot/: lifecycle.py
src/infrastructure/db/: models.py  repositories.py  session.py  uow.py
src/infrastructure/redis/: client.py  fsm.py
tests/: conftest.py
tests/e2e/: test_user_auth_service.py  test_user_game_service.py  test_user_profile_service.py
tests/tests_utils/: dummy_config.py
