[tool.poetry]
name = "tgbot-template"
version = "0.1.0"
description = "simple template for tg bot via aiogram"
authors = ["NekitPnt <panatikin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "0.6.0"
certifi = "^2023.11.17"
ujson = "5.8.0"
msgpack = "^1.0.7"
aiogram = "^3.4"
sqlalchemy = "^2.0"
asyncpg = "^0.30.0"
alembic = "^1.16.1"
redis = "^6.2.0"
apscheduler = "^3.10"
fastapi = "^0.115.12"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "*"
ruff = "*"
black = "^22"

[tool.black]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
ignore_missing_imports = true
show_error_codes = true
scripts_are_modules = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = [
  "E",
  "F",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ASYNC",
  "S",
  "B",
  "C4",
  "DTZ",
  "T10",
  "ISC",
  "ICN",
  "PIE",
  "T20",
  "PT",
  "Q",
  "RET",
  "SLF",
  "SIM",
  "ERA",
  "PLE",
  "TRY",
]
unfixable = [
  "ERA", # do not autoremove commented out code
]
ignore = ["TRY003"]
line-length = 120
